src/patternfly/components/Menu/menu.scss
/* ... */
// Description
.#{$menu}__item-description {
  font-size: var(--#{$menu}__item-description--FontSize);
  color: var(--#{$menu}__item-description--Color);
  word-break: break-all;
}

// General icon
.#{$menu}__item-icon {
  margin-right: var(--#{$menu}__item-icon--MarginRight);
}

// Check
.#{$menu}__item-check {
  display: flex;
  align-items: center;
  margin-right: var(--#{$menu}__item-check--MarginRight);
}

// Toggle icon
.#{$menu}__item-toggle-icon {
  padding-right: var(--#{$menu}__item-toggle-icon--PaddingRight);
  padding-left: var(--#{$menu}__item-toggle-icon--PaddingLeft);
  color: var(--#{$menu}__item-toggle-icon, inherit);
}

.#{$menu}__item-text + .#{$menu}__item-toggle-icon {
  margin-left: var(--#{$menu}__item-text--item-toggle-icon--MarginLeft);
}

.#{$menu}__item-toggle-icon + .#{$menu}__item-text {
  margin-left: var(--#{$menu}__item-toggle-icon--item-text--MarginLeft);
}

// Select icon
.#{$menu}__item-select-icon {
  margin-left: var(--#{$menu}__item-select-icon--MarginLeft);
  font-size: var(--#{$menu}__item-select-icon--FontSize);
  color: var(--#{$menu}__item-select-icon--Color);
  opacity: 0;
}

// Actions
.#{$menu}__item-action {
  display: flex;
  padding-top: var(--#{$menu}__item-action--PaddingTop);
  padding-right: var(--#{$menu}__item-action--PaddingRight);
  padding-bottom: var(--#{$menu}__item-action--PaddingBottom);
  padding-left: var(--#{$menu}__item-action--PaddingLeft);
  color: var(--#{$menu}__item-action--Color);
  background-color: var(--#{$menu}__item-action--BackgroundColor);
  border: none;

  &.pf-m-favorite {
    .#{$menu}__item-action-icon {
      font-size: var(--#{$menu}__item-action--m-favorite__icon--FontSize);
    }
  }

  &.pf-m-favorited {
    --#{$menu}__item-action--Color: var(--#{$menu}__item-action--m-favorited--Color);
    --#{$menu}__item-action--hover--Color: var(--#{$menu}__item-action--m-favorited--hover--Color);
  }

  &:hover,
  &:focus {
    --#{$menu}__item-action--Color: var(--#{$menu}__item-action--hover--Color);
  }

  &:disabled,
  &.pf-m-disabled,
  &.pf-m-aria-disabled {
    --#{$menu}__item-action--Color: var(--#{$menu}__item-action--disabled--Color);
  }
}

.#{$menu}__item-action-icon {
  display: flex;
  align-items: center;
  height: var(--#{$menu}__item-action-icon--Height);
}

.#{$menu}__footer {
  position: relative;
  padding: var(--#{$menu}__footer--PaddingTop) var(--#{$menu}__footer--PaddingRight) var(--#{$menu}__footer--PaddingBottom) var(--#{$menu}__footer--PaddingLeft);
  box-shadow: var(--#{$menu}__footer--BoxShadow);

  &::after {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    pointer-events: none;
    content: "";
    border-top: var(--#{$menu}__footer--after--BorderTopWidth) solid var(--#{$menu}__footer--after--BorderTopColor);
  }
}

// stylelint-disable no-invalid-position-at-import-rule
@import "themes/dark/menu";

@include pf-v5-theme-dark {
  @include pf-v5-theme-dark-menu;
}

